src/objects/vlocity_cmt__CalculationMatrixVersion__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__CalculationMatrixId__c</fullName>
        <label>Pricing Matrix</label>
        <referenceTo>vlocity_cmt__CalculationMatrix__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Matrix Versions</relationshipLabel>
        <relationshipName>Vlocity_Calculation_Table_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentStatus__c</fullName>
        <formula>IF(AND(vlocity_cmt__StartDateTime__c &lt; NOW(), vlocity_cmt__IsEnabled__c, OR(ISNULL(vlocity_cmt__EndDateTime__c), vlocity_cmt__EndDateTime__c &gt; NOW())), &quot;Active&quot;,IF(AND(NOT(ISNULL(vlocity_cmt__EndDateTime__c)),vlocity_cmt__EndDateTime__c &lt; NOW(), vlocity_cmt__IsEnabled__c), &quot;Expired&quot;,IF(AND(vlocity_cmt__StartDateTime__c &gt; NOW(), vlocity_cmt__IsEnabled__c), &quot;Pending&quot;, &quot;Inactive&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDateTime__c</fullName>
        <label>End Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the matrix version. Used to identify the matrix version across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GroupKeyValue__c</fullName>
        <externalId>true</externalId>
        <label>Group Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GroupKey__c</fullName>
        <formula>vlocity_cmt__CalculationMatrixId__r.vlocity_cmt__GroupKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MatrixRecordType__c</fullName>
        <formula>vlocity_cmt__CalculationMatrixId__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matrix Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MatrixUseLongOutput__c</fullName>
        <formula>( vlocity_cmt__MatrixRecordType__c = &apos;RowVersioned&apos; &amp;&amp; vlocity_cmt__CalculationMatrixId__r.vlocity_cmt__VersionsWithLongOutputCount__c &gt; 0) ||  vlocity_cmt__UseLongOutput__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matrix Use Long Output</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubGroupKeyValue__c</fullName>
        <externalId>true</externalId>
        <label>Sub Group Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubGroupKey__c</fullName>
        <formula>vlocity_cmt__CalculationMatrixId__r.vlocity_cmt__SubGroupKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Group Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UseLongOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses Long OutputData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__WildcardColumn__c</fullName>
        <formula>vlocity_cmt__CalculationMatrixId__r.vlocity_cmt__WildcardColumn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wildcard Column</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__WildcardValue__c</fullName>
        <formula>vlocity_cmt__CalculationMatrixId__r.vlocity_cmt__WildcardValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wildcard Value</label>
        <type>Text</type>
    </fields>
    <label>Vlocity Calculation Matrix Version</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>